--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "prefix": "-",
-    "token": "ODU4OTk5MjM1ODUyMjM4ODU4.YNmTYQ.oUGNUqy0JAK6kmvJz4Cr-3Yuzno",
+    "token": "TOKENHERE",
     "userLevel": {
         "331013656118689794": 9,
         "398139325633789953": 8
